<resources>
    <string name="app_name">Markdown Editor</string>
    <string name="new_note_button">New note</string>
    <string name="fab_new">New</string>
    <string name="import_from_file">Import from file</string>
    <string name="import_from_url">Import from URL</string>
    <string name="new_markdown">New Markdown</string>
    <string name="write_the_markdown_here">Write the Markdown code here</string>
    <string name="preview">Preview</string>
    <string name="editor">Editor</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="url">URL</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="note_deleted_message">Note deleted</string>
    <string name="import_from_url_error">Error importing markdown, please check the url.</string>
    <string name="import_from_url_error_serverless">Error importing markdown. The server is not available now.</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="import_from_url_success">Markdown imported successfully!</string>
    <string name="share_using">Share using:</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="link">Link</string>
    <string name="image">Image</string>
    <string name="unordered_list">Unordered list</string>
    <string name="ordered_list">Ordered list</string>
    <string name="heading">Heading</string>
    <string name="quote">Quote</string>
    <string name="code">Code</string>
    <string name="markdown_list">Markdown List</string>
    <string name="none_note_created_message">You don\'t have any markdown note yet</string>
    <string name="none_note_found_message">No notes founds</string>
</resources>